--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             --text-light: #64748b;
             --border: #e2e8f0;
             --shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-            --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
             --radius: 0.5rem;
         }
 
@@ -132,6 +131,13 @@
             margin-bottom: 0.5rem;
             font-weight: 500;
             color: var(--text);
+        }
+
+        .form-text {
+            display: block;
+            font-size: 0.875rem;
+            color: var(--text-light);
+            margin-top: 0.25rem;
         }
 
         .form-input {
@@ -391,12 +397,12 @@
                     </div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-title">Vendedores Ativos</div>
-                    <div class="stat-value" id="totalVendedores">0</div>
+                    <div class="stat-title">Clientes Atendidos</div>
+                    <div class="stat-value" id="totalClientes">0</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-title">Serviços Ativos</div>
-                    <div class="stat-value" id="totalServicos">0</div>
+                    <div class="stat-title">Ticket Médio</div>
+                    <div class="stat-value" id="ticketMedio">R$ 0,00</div>
                 </div>
             </div>
 
@@ -422,6 +428,29 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="card">
+                    <div class="card-header">
+                        <h2 class="card-title">Vendas por Categoria de Serviço</h2>
+                    </div>
+                    <div class="card-body">
+                        <div class="chart-container">
+                            <canvas id="vendasCategoriaChart"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="card-title">Personalizar Tema</h2>
+                </div>
+                <div class="card-body">
+                    <div class="form-group">
+                        <label class="form-label">Cor Primária</label>
+                        <input type="color" id="corPrimaria" value="#4f46e5" onchange="atualizarTema()">
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -445,7 +474,7 @@
                             </div>
                             <div class="form-group">
                                 <label class="form-label">Telefone</label>
-                                <input type="tel" id="telefoneVendedor" class="form-input" placeholder="(DDD) 99999-9999" pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}" required>
+                                <input type="tel" id="telefoneVendedor" class="form-input" placeholder="(XX) XXXXX-XXXX">
                             </div>
                             <button type="submit" class="btn btn-primary">Cadastrar Vendedor</button>
                         </form>
@@ -598,6 +627,7 @@
                         </div>
                         <div class="form-group">
                             <label class="form-label">Colunas</label>
+                            <small class="form-text">(Pressione Ctrl para selecionar mais de um item)</small>
                             <select id="filtroColunas" class="form-select" multiple>
                                 <option value="data">Data da Venda</option>
                                 <option value="vendedor">Nome do Vendedor</option>
@@ -1195,12 +1225,33 @@
                 data.push(rowData);
             });
 
-            const doc = new jsPDF();
+            const doc = new jsPDF({
+                orientation: 'landscape', // Orientação horizontal
+                unit: 'mm',
+                format: 'a4'
+            });
+
+            // Adicionar título ao PDF
+            doc.setFontSize(16);
+            doc.text('Relatório de Vendas', 14, 20);
+
+            // Adicionar tabela ao PDF
             doc.autoTable({
                 head: [headers],
                 body: data,
+                startY: 25, // Posição inicial da tabela
+                theme: 'grid', // Estilo da tabela
+                styles: {
+                    fontSize: 10, // Tamanho da fonte
+                    cellPadding: 3, // Espaçamento interno das células
+                },
+                headStyles: {
+                    fillColor: [79, 70, 229], // Cor de fundo do cabeçalho (azul)
+                    textColor: [255, 255, 255] // Cor do texto do cabeçalho (branco)
+                }
             });
 
+            // Salvar o PDF
             doc.save('relatorio_vendas.pdf');
         }
 
@@ -1252,10 +1303,12 @@
 
             atualizarTotalVendas(vendasFiltradas);
             atualizarComissoes(vendasFiltradas);
+            atualizarTotalClientes(vendasFiltradas);
+            atualizarTicketMedio(vendasFiltradas);
+            atualizarConversaoVendas(vendasFiltradas);
             atualizarGraficoVendasPorServico(vendasFiltradas);
             atualizarGraficoDesempenhoVendedores(vendasFiltradas);
-            atualizarComparacaoMensal();
-            atualizarRankingVendedores(vendasFiltradas);
+            atualizarGraficoVendasPorCategoria(vendasFiltradas);
         }
 
         // Função para atualizar o total de vendas
@@ -1268,6 +1321,35 @@
         function atualizarComissoes(vendasFiltradas) {
             const totalComissoes = vendasFiltradas.reduce((total, venda) => total + venda.valorReceber, 0);
             document.getElementById('totalComissoesDash').textContent = formatarMoeda(totalComissoes);
+        }
+
+        // Função para calcular o total de clientes atendidos
+        function atualizarTotalClientes(vendasFiltradas) {
+            const clientesUnicos = new Set(vendasFiltradas.map(venda => venda.nomeCliente));
+            document.getElementById('totalClientes').textContent = clientesUnicos.size;
+        }
+
+        // Função para calcular o ticket médio por venda
+        function atualizarTicketMedio(vendasFiltradas) {
+            const totalVendas = vendasFiltradas.reduce((total, venda) => total + venda.valorVenda, 0);
+            const ticketMedio = vendasFiltradas.length > 0 ? totalVendas / vendasFiltradas.length : 0;
+            document.getElementById('ticketMedio').textContent = formatarMoeda(ticketMedio);
+        }
+
+        // Função para calcular a conversão de vendas por vendedor
+        function atualizarConversaoVendas(vendasFiltradas) {
+            const vendedores = dados.vendedores.map(vendedor => vendedor.nome);
+            const conversao = vendedores.map(vendedor => {
+                const vendasVendedor = vendasFiltradas.filter(venda => venda.vendedor === vendedor);
+                const clientesUnicos = new Set(vendasVendedor.map(venda => venda.nomeCliente));
+                return {
+                    vendedor,
+                    conversao: clientesUnicos.size > 0 ? (vendasVendedor.length / clientesUnicos.size) * 100 : 0
+                };
+            });
+
+            const conversaoMedia = conversao.reduce((total, item) => total + item.conversao, 0) / conversao.length;
+            document.getElementById('conversaoVendas').textContent = `${conversaoMedia.toFixed(2)}%`;
         }
 
         // Função para atualizar o gráfico de vendas por serviço
@@ -1304,46 +1386,19 @@
             desempenhoVendedoresChart.update();
         }
 
-        // Função para atualizar a comparação mensal de vendas
-        function atualizarComparacaoMensal() {
-            const meses = Array.from({ length: 12 }, (_, i) => i);
-            const anoSelecionado = parseInt(document.getElementById('anoFiltro').value);
-
-            const vendasPorMes = meses.map(mes => {
-                return dados.vendas.filter(venda => {
-                    const dataVenda = new Date(venda.data.split('/').reverse().join('-'));
-                    return dataVenda.getMonth() === mes && dataVenda.getFullYear() === anoSelecionado;
-                }).reduce((total, venda) => total + venda.valorVenda, 0);
+        // Função para atualizar o gráfico de vendas por categoria de serviço
+        function atualizarGraficoVendasPorCategoria(vendasFiltradas) {
+            const categorias = [...new Set(dados.servicos.map(servico => servico.categoria))];
+            const vendasPorCategoria = categorias.map(categoria => {
+                return vendasFiltradas.filter(venda => {
+                    const servico = dados.servicos.find(s => s.nome === venda.servico);
+                    return servico.categoria === categoria;
+                }).length;
             });
 
-            comparacaoMensalChart.data.datasets[0].data = vendasPorMes;
-            comparacaoMensalChart.update();
-        }
-
-        // Função para atualizar o ranking de vendedores
-        function atualizarRankingVendedores(vendasFiltradas) {
-            const ranking = dados.vendedores.map(vendedor => {
-                const vendasVendedor = vendasFiltradas.filter(venda => venda.vendedor === vendedor.nome);
-                const totalVendas = vendasVendedor.reduce((total, venda) => total + venda.valorVenda, 0);
-                return {
-                    nome: vendedor.nome,
-                    quantidade: vendasVendedor.length,
-                    total: totalVendas
-                };
-            }).sort((a, b) => b.total - a.total);
-
-            const tbody = document.querySelector('#rankingVendedores tbody');
-            tbody.innerHTML = '';
-
-            ranking.forEach(vendedor => {
-                const row = document.createElement('tr');
-                row.innerHTML = `
-                    <td>${vendedor.nome}</td>
-                    <td>${vendedor.quantidade}</td>
-                    <td>${formatarMoeda(vendedor.total)}</td>
-                `;
-                tbody.appendChild(row);
-            });
+            vendasCategoriaChart.data.labels = categorias;
+            vendasCategoriaChart.data.datasets[0].data = vendasPorCategoria;
+            vendasCategoriaChart.update();
         }
 
         // Inicialização dos gráficos
@@ -1383,26 +1438,37 @@
             }
         });
 
-        const comparacaoMensalChart = new Chart(document.getElementById('comparacaoMensalChart'), {
-            type: 'bar',
+        const vendasCategoriaChart = new Chart(document.getElementById('vendasCategoriaChart'), {
+            type: 'pie',
             data: {
-                labels: ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'],
+                labels: [],
                 datasets: [{
-                    label: 'Vendas',
+                    label: 'Vendas por Categoria',
                     data: [],
-                    backgroundColor: 'rgba(79, 70, 229, 0.2)',
-                    borderColor: 'rgba(79, 70, 229, 1)',
-                    borderWidth: 1
+                    backgroundColor: ['#4f46e5', '#ef4444', '#22c55e', '#f59e0b', '#3b82f6'],
                 }]
             },
             options: {
-                scales: {
-                    y: {
-                        beginAtZero: true
-                    }
-                }
+                responsive: true,
             }
         });
+
+        // Formatação automática do campo de telefone
+        document.getElementById('telefoneVendedor').addEventListener('input', function (e) {
+            let telefone = e.target.value.replace(/\D/g, ''); // Remove tudo que não for número
+            if (telefone.length > 0) {
+                telefone = `(${telefone.substring(0, 2)}) ${telefone.substring(2, 7)}-${telefone.substring(7, 11)}`;
+            }
+            e.target.value = telefone;
+        });
+
+        // Atualização do tema com base na cor selecionada
+        function atualizarTema() {
+            const corPrimaria = document.getElementById('corPrimaria').value;
+            document.documentElement.style.setProperty('--primary', corPrimaria);
+            document.documentElement.style.setProperty('--primary-light', `${corPrimaria}99`);
+            document.documentElement.style.setProperty('--primary-dark', `${corPrimaria}cc`);
+        }
     </script>
 </body>
 </html>
